# tst_ci

./: .pre-commit-config.yaml  main.py  pyproject.toml  setup.cfg  test_main.py
.github/workflows/: ci.yml
