[tool.poetry]
name = "otus-python-pro-lecture1"
version = "0.1.0"
description = "Lecture 1 project for OTUS Python Pro course"
authors = ["Stanislav Stupnikov <st.stupnikov@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
pytest = "^8.2.1"
pyupgrade = "^3.15.2"
ruff = "^0.4.6"
uv = "^0.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = ['E231', 'E241']
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 88
count = true

[tool.black]
line-length = 109
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | .venv
  | buck-out
  | build
  | dist
)/

[tool.isort]
profile = "black"
