[project]
name = "test-ci"
version = "0.1.0"
description = ""
authors = [
    {name = "Davydov Kirill",email = "davydov34@gmai.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pre-commit (>=4.1.0,<5.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "flake8 (>=7.1.2,<8.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
package-mode = false

[tool.black]
line-length = 79
skip-magic-trailing-comma = false
skip-string-normalization = false
target-version = 'py312'

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
